modules/install/app/config/account-v1.yaml
---
# Source: microservice/charts/mongodb/templates/svc-standalone.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-mongodb
  labels:
    app: account-mongodb
    chart: mongodb-5.3.2
    release: "account"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: mongo
    port: 27017
    targetPort: mongo
  selector:
    app: account-mongodb
    release: "account"
---
# Source: microservice/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
    service: account
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-account
  selector:
    app: account
---
# Source: microservice/charts/mongodb/templates/deployment-standalone.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-mongodb
  labels:
    app: account-mongodb
    chart: mongodb-5.3.2
    release: "account"
    heritage: "Helm"
spec:
  selector:
    matchLabels:
      app: account-mongodb
      release: "account"
  template:
    metadata:
      labels:
        app: account-mongodb
        release: "account"
        chart: mongodb-5.3.2
    spec:
      serviceAccountName: account-mongodb
      containers:
      - name: account-mongodb
        image: gcr.io/tetratelabs/modernbank/mongodb:4.0.6
        imagePullPolicy: "Always"
        ports:
        - name: mongo
          containerPort: 27017
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: data
          mountPath: /bitnami/mongodb
        resources:
          {}
      volumes:
      - name: data
        emptyDir: {}
---
# Source: microservice/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: account-v1
  labels:
    app: account
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
      version: v1
  template:
    metadata:
      labels:
        app: account
        version: v1
    spec:
      serviceAccountName: account
      containers:
        - name: account
          image: "gcr.io/tetratelabs/modernbank/account:v1.0.0"
          imagePullPolicy: Always
          args: ["--port", "8080", "--version", "v1"]
          ports:
          - name: http
            containerPort: 8080
