modules/install/app/config/transaction-v1.yaml
---
# Source: microservice/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction
  labels:
    app: transaction
    service: transaction
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-transaction
  selector:
    app: transaction
---
# Source: microservice/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-v1
  labels:
    app: transaction
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
      version: v1
  template:
    metadata:
      labels:
        app: transaction
        version: v1
    spec:
      serviceAccountName: transaction
      containers:
        - name: transaction
          image: "gcr.io/tetratelabs/modernbank/transaction:v1.0.0"
          imagePullPolicy: Always
          args: ["--port", "8080", "--version", "v1"]
          ports:
          - name: http
            containerPort: 8080
