modules/install/app/config/ui-v1.yaml
---
# Source: microservice/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
    service: ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-ui
  selector:
    app: ui
---
# Source: microservice/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-v1
  labels:
    app: ui
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
      version: v1
  template:
    metadata:
      labels:
        app: ui
        version: v1
    spec:
      serviceAccountName: ui
      containers:
        - name: ui
          image: "gcr.io/tetratelabs/modernbank/ui:v1.0.0"
          imagePullPolicy: Always
          args: ["--port", "80", "--version", "v1"]
          ports:
          - name: http
            containerPort: 80
