modules/install/app/config/user-v1.yaml
---
# Source: microservice/charts/mongodb/templates/svc-standalone.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-mongodb
  labels:
    app: user-mongodb
    chart: mongodb-5.3.2
    release: "user"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: mongo
    port: 27017
    targetPort: mongo
  selector:
    app: user-mongodb
    release: "user"
---
# Source: microservice/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    service: user
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http-user
  selector:
    app: user
---
# Source: microservice/charts/mongodb/templates/deployment-standalone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mongodb
  labels:
    app: user-mongodb
    chart: mongodb-5.3.2
    release: "user"
    heritage: "Helm"
spec:
  selector:
    matchLabels:
      app: user-mongodb
      release: "user"
  template:
    metadata:
      labels:
        app: user-mongodb
        release: "user"
        chart: mongodb-5.3.2
    spec:
      serviceAccountName: user-mongodb
      containers:
      - name: user-mongodb
        image: gcr.io/tetratelabs/modernbank/mongodb:4.0.6
        imagePullPolicy: "Always"
        ports:
        - name: mongo
          containerPort: 27017
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: data
          mountPath: /bitnami/mongodb
        resources:
          {}
      volumes:
      - name: data
        emptyDir: {}
---
# Source: microservice/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-v1
  labels:
    app: user
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      version: v1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      serviceAccountName: user
      containers:
        - name: user
          image: "gcr.io/tetratelabs/modernbank/user:v1.0.0"
          imagePullPolicy: Always
          args: ["--port", "8080", "--version", "v1"]
          ports:
          - name: http
            containerPort: 8080
